# Recall

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  ruff_report.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202605060001_initial_schema.py  202605070001_phase2_ingestion.py  202605070002_phase3_transcripts.py  202605070003_phase4_ai_learning.py  202605080001_phase5_search_notes.py  202605080002_phase6_curriculum_reconstruction.py  202605080003_phase7_extension_save_flow.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/core/: config.py  security.py  statuses.py
apps/api/app/models/: __init__.py  ai_summary.py  ai_summary_job.py  curriculum_reconstruction_job.py  extension_save_event.py  important_moment.py  ingestion_job.py  key_concept.py  key_takeaway.py  learning_module.py  module_video.py  review_question.py  search_query.py  search_result_click.py  source.py  space.py  transcript_job.py  transcript_segment.py  user.py  video.py  video_curriculum_profile.py  video_dependency.py  video_note.py
apps/api/app/repositories/: ai_summaries.py  ai_summary_jobs.py  curriculum_reconstruction_jobs.py  extension_save_events.py  ingestion_jobs.py  search_queries.py  sources.py  spaces.py  transcript_jobs.py  transcript_segments.py  users.py  video_notes.py  videos.py
apps/api/app/schemas/: __init__.py  ai_summary.py  auth.py  curriculum.py  extension.py  search.py  (+7 more)
apps/api/scripts/: seed.py
(+118 files in other folders)
