[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-api"
version = "0.1.0"
description = "FastAPI backend for Recall."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "bcrypt>=4.0.1,<4.1.0",
  "httpx>=0.28.1",
  "imageio-ffmpeg>=0.6.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "openai-whisper>=20240930",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "rq>=2.1.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
  "yt-dlp>=2025.1.26"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
exclude = ["alembic*", "storage*"]
namespaces = false
